# android-abx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  publish.yml
benches/: deserialize.rs  encoding.rs  parsing.rs  xml_encoding.rs
benches/common/: mod.rs
examples/: abx2xml.rs  serde_pkgs.rs  serde_root.rs  xml2abx.rs
src/: de.rs  error.rs  event.rs  lib.rs  stream.rs  wire.rs
src/de/: element.rs  mod.rs  traversal.rs  value.rs
src/decode/: mod.rs  slice.rs  stream.rs
src/encode/: mod.rs  writer.rs  xml.rs
tests/: aosp_fixture_serde_tests.rs  aosp_fixture_tests.rs  encode_tests.rs  parser_tests.rs  serde_tests.rs  xml_to_abx_tests.rs
tests/common/: mod.rs
tests/fixtures/: aosp_verify.abx  booleans.abx  booleans.xml  nested_permissions.abx  nested_permissions.xml  repeated_strings.abx  repeated_strings.xml  simple_pkg.abx  simple_pkg.xml  special_chars.abx  special_chars.xml
tests/fixtures/aosp_verify/: .gitignore  Containerfile  Harness.java  build-and-run.sh  refresh-vendored-sources.sh
tests/fixtures/aosp_verify/android/annotation/: NonNull.java  Nullable.java
tests/fixtures/aosp_verify/android/text/: TextUtils.java
tests/fixtures/aosp_verify/android/util/: Base64.java
