[package]
name = "abx"
version = "0.1.0"
edition = "2024"
description = "Android Binary XML (ABX) parser using nom"
license = "MIT"

[dependencies]
nom = "7"
base64 = "0.22"
faster-hex = "0.9"
thiserror = "1"
serde = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
serialize = ["dep:serde"]

[[example]]
name = "abx2xml"
path = "examples/abx2xml.rs"

[[example]]
name = "serde_pkgs"
path = "examples/serde_pkgs.rs"
required-features = ["serialize"]

[[example]]
name = "serde_root"
path = "examples/serde_root.rs"
required-features = ["serialize"]

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "deserialize"
harness = false
required-features = ["serialize"]
