[package]
name = "android-abx"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Android Binary XML (ABX) parser using nom"
license = "MIT"
repository = "https://github.com/pngouin/android-abx"
homepage = "https://github.com/pngouin/android-abx"
documentation = "https://docs.rs/android-abx"
keywords = ["android", "xml", "binary", "parser", "serialization"]
categories = ["parser-implementations", "encoding"]
exclude = ["tests/fixtures/aosp_verify/", "cliff.toml"]

[lib]
name = "abx"

[package.metadata.docs.rs]
all-features = true

[dependencies]
nom = "8"
base64 = "0.23"
faster-hex = "0.10"
thiserror = "2"
serde = { version = "1", optional = true }
smol_str = "0.3"
quick-xml = { version = "0.41.0", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }

[features]
default = []
serialize = ["dep:serde"]
xml = ["dep:quick-xml"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }

[[example]]
name = "abx2xml"
path = "examples/abx2xml.rs"

[[example]]
name = "xml2abx"
path = "examples/xml2abx.rs"
required-features = ["xml"]

[[example]]
name = "serde_pkgs"
path = "examples/serde_pkgs.rs"
required-features = ["serialize"]

[[example]]
name = "serde_root"
path = "examples/serde_root.rs"
required-features = ["serialize"]

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "deserialize"
harness = false
required-features = ["serialize"]

[[bench]]
name = "encoding"
harness = false

[[bench]]
name = "xml_encoding"
harness = false
required-features = ["xml"]
